long day's worth of changes to home, eligibility, foundation, and trustees pages.

--- a/eligibility.bootstrap.html
+++ b/eligibility.bootstrap.html
@@ -69,7 +69,12 @@
             color: white;
         }
 
+        ol {
+            line-height: 175%;
+        }
+
         .title {
+            color: #003366;
             font-size: 1.25em;
             font-weight: bold;
         }
@@ -86,23 +91,23 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="#">CCAR</a>
+				<a class="navbar-brand" href="index.bootstrap.html">CCAR</a>
 			</div>
 			<div class="collapse navbar-collapse" id="my-navbar">
 				<ul class="nav navbar-nav navbar-right">
 					<li class="dropdown">
 						<a class="dropdown-toggle" data-toggle="dropdown" href="#">SCHOLARSHIP<span class="caret"></span></a>
 	    				<ul class="dropdown-menu">
-	    					<li><a href="#">ELIGIBILITY</a></li>
+	    					<li><a href="eligibility.bootstrap.html">ELIGIBILITY</a></li>
 							<li><a href="#">APPLICATION</a></li>
 	    				</ul>
 					</li>
 	  				<li class="dropdown">
 	  					<a class="dropdown-toggle" data-toggle="dropdown" href="#">ABOUT US<span class="caret"></span></a>
 	    				<ul class="dropdown-menu">
-                            <li><a href="#">FOUNDATION</a></li>
-		  					<li><a href="#">TRUSTEES</a></li>
-		  					<li><a href="#">CONTRIBUTION</a></li>
+                            <li><a href="foundation.bootstrap.html">FOUNDATION</a></li>
+		  					<li><a href="trustees.bootstrap.html">TRUSTEES</a></li>
+		  					<li><a href="contribution.bootstrap.html">CONTRIBUTION</a></li>
 		  				</ul>
 	  				</li>
                     <li class="dropdown">
@@ -143,12 +148,12 @@
                     <li>Be a resident of Contra Costa County</li>
                 </ol>
                 <h4 class="title line">Submit an application to include:</h4>
-                <ul>
+                <ol>
                     <li>Your most recent transcript</li>
                     <li>Letter of recommendation on school stationery from one of your instructors</li>
                     <li>A 300 word essay stating your reasons for pursuing a career in real estate, finance
                     and/or business</li>
-                </ul>
+                </ol>
             </div>
             <div class="col-md-3"></div>
         </div>
@@ -196,16 +201,16 @@
                 <div class="col-md-2 footer-box">
                     <h4 class="footer-head">Scholarship</h4>
                     <ul>
-                        <li><a class="site-link" href="#">Eligibility</a></li>
+                        <li><a class="site-link" href="eligibility.bootstrap.html">Eligibility</a></li>
                         <li><a class="site-link" href="#">Application</a></li>
                     </ul>
                 </div>
         		<div class="col-md-2 footer-box">
                     <h4 class="footer-head">About Us</h4>
                     <ul>
-                        <li><a class="site-link" href="#">Foundation</a></li>
-                        <li><a class="site-link" href="#">Trustees</a></li>
-                        <li><a class="site-link" href="#">Contribution</a></li>
+                        <li><a class="site-link" href="foundation.bootstrap.html">Foundation</a></li>
+                        <li><a class="site-link" href="trustees.bootstrap.html">Trustees</a></li>
+                        <li><a class="site-link" href="contributions.bootstrap.html">Contribution</a></li>
                     </ul>
                 </div>
                 <div class="col-md-2 footer-box">
