--- a/foundation.bootstrap.html
+++ b/foundation.bootstrap.html
@@ -65,23 +65,23 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="#">CCAR</a>
+				<a class="navbar-brand" href="index.bootstrap.html">CCAR</a>
 			</div>
 			<div class="collapse navbar-collapse" id="my-navbar">
 				<ul class="nav navbar-nav navbar-right">
 					<li class="dropdown">
 						<a class="dropdown-toggle" data-toggle="dropdown" href="#">SCHOLARSHIP<span class="caret"></span></a>
 	    				<ul class="dropdown-menu">
-	    					<li><a href="#">ELIGIBILITY</a></li>
+	    					<li><a href="eligibility.bootstrap.html">ELIGIBILITY</a></li>
 							<li><a href="#">APPLICATION</a></li>
 	    				</ul>
 					</li>
 	  				<li class="dropdown">
 	  					<a class="dropdown-toggle" data-toggle="dropdown" href="#">ABOUT US<span class="caret"></span></a>
 	    				<ul class="dropdown-menu">
-                            <li><a href="#">FOUNDATION</a></li>
-		  					<li><a href="#">TRUSTEES</a></li>
-		  					<li><a href="#">CONTRIBUTION</a></li>
+                            <li><a href="foundation.bootstrap.html">FOUNDATION</a></li>
+		  					<li><a href="trustees.bootstrap.html">TRUSTEES</a></li>
+		  					<li><a href="contribution.bootstrap.html">CONTRIBUTION</a></li>
 		  				</ul>
 	  				</li>
                     <li class="dropdown">
@@ -124,55 +124,57 @@
         </div>
         <div class="row eligibility-text">
             <div class="col-md-3"></div>
-            <div class="col-md-2">
-                <ul class="school-list">
-                    <li>Georgetown University</li>
-                    <li>UC Berkeley</li>
-                    <li>St. Mary's College</li>
-                    <li>USC</li>
-                    <li>Claremont McKenna College</li>
-                    <li>Diablo Valley College</li>
-                    <li>Sonoma State University</li>
-                    <li>San Diego State University</li>
-                    <li>Kingston University (London)</li>
-                    <li>University of Oregon</li>
-                    <li>Humboldt State University</li>
-                    <li>UCSB</li>
-                    <li>John F. Kennedy University</li>
-                </ul>
-            </div>
-            <div class="col-md-2">
-                <ul class="school-list">
-                    <li>University of Maryland</li>
-                    <li>UCLA</li>
-                    <li>University of California – Davis</li>
-                    <li>University of Denver</li>
-                    <li>Whittier College</li>
-                    <li>California State – East Bay</li>
-                    <li>Loyola Marymount University</li>
-                    <li>Hawaii Pacific University</li>
-                    <li>Boston College</li>
-                    <li>California Polytechnic State University</li>
-                    <li>University of Washington</li>
-                    <li>Wake Forest University</li>
-                </ul>
-            </div>
-            <div class="col-md-2">
-                <ul class="school-list">
-                    <li>San Jose State University</li>
-                    <li>Southern Methodist University</li>
-                    <li>Seattle Pacific University</li>
-                    <li>Harvard College</li>
-                    <li>University of the Pacific</li>
-                    <li>California State - Sacramento</li>
-                    <li>University of Arizona</li>
-                    <li>Chapman University</li>
-                    <li>Arizona State University</li>
-                    <li>California State – Chico</li>
-                    <li>University of Pennsylvania</li>
-                    <li>New York University</li>
-                    <li>University of Minnesota</li>
-                </ul>
+            <div class="col-md-6">
+                <div class="col-md-4">
+                    <ul class="school-list">
+                        <li>Georgetown University</li>
+                        <li>UC Berkeley</li>
+                        <li>St. Mary's College</li>
+                        <li>USC</li>
+                        <li>Claremont McKenna College</li>
+                        <li>Diablo Valley College</li>
+                        <li>Sonoma State University</li>
+                        <li>San Diego State University</li>
+                        <li>Kingston University (London)</li>
+                        <li>University of Oregon</li>
+                        <li>Humboldt State University</li>
+                        <li>UCSB</li>
+                        <li>John F. Kennedy University</li>
+                    </ul>
+                </div>
+                <div class="col-md-4">
+                    <ul class="school-list">
+                        <li>University of Maryland</li>
+                        <li>UCLA</li>
+                        <li>University of California – Davis</li>
+                        <li>University of Denver</li>
+                        <li>Whittier College</li>
+                        <li>California State – East Bay</li>
+                        <li>Loyola Marymount University</li>
+                        <li>Hawaii Pacific University</li>
+                        <li>Boston College</li>
+                        <li>California Polytechnic State University</li>
+                        <li>University of Washington</li>
+                        <li>Wake Forest University</li>
+                    </ul>
+                </div>
+                <div class="col-md-4">
+                    <ul class="school-list">
+                        <li>San Jose State University</li>
+                        <li>Southern Methodist University</li>
+                        <li>Seattle Pacific University</li>
+                        <li>Harvard College</li>
+                        <li>University of the Pacific</li>
+                        <li>California State - Sacramento</li>
+                        <li>University of Arizona</li>
+                        <li>Chapman University</li>
+                        <li>Arizona State University</li>
+                        <li>California State – Chico</li>
+                        <li>University of Pennsylvania</li>
+                        <li>New York University</li>
+                        <li>University of Minnesota</li>
+                    </ul>
+                </div>
             </div>
             <div class="col-md-3"></div>
         </div>
@@ -193,16 +195,16 @@
                 <div class="col-md-2 footer-box">
                     <h4 class="footer-head">Scholarship</h4>
                     <ul>
-                        <li><a class="site-link" href="#">Eligibility</a></li>
+                        <li><a class="site-link" href="eligibility.bootstrap.html">Eligibility</a></li>
                         <li><a class="site-link" href="#">Application</a></li>
                     </ul>
                 </div>
         		<div class="col-md-2 footer-box">
                     <h4 class="footer-head">About Us</h4>
                     <ul>
-                        <li><a class="site-link" href="#">Foundation</a></li>
-                        <li><a class="site-link" href="#">Trustees</a></li>
-                        <li><a class="site-link" href="#">Contribution</a></li>
+                        <li><a class="site-link" href="foundation.bootstrap.html">Foundation</a></li>
+                        <li><a class="site-link" href="trustees.bootstrap.html">Trustees</a></li>
+                        <li><a class="site-link" href="contribution.bootstrap.html">Contribution</a></li>
                     </ul>
                 </div>
                 <div class="col-md-2 footer-box">
