--- a/index.bootstrap.html
+++ b/index.bootstrap.html
@@ -8,6 +8,7 @@
 	<!-- Latest compiled and minified CSS -->
 
     <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Righteous' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
     <link rel="stylesheet" href="styles.css">
@@ -54,13 +55,18 @@
             color: #003366;
             font-family: 'Lato', sans-serif;
             font-size: 2.25em;
-            padding: 15px 0 15px 0;
+            padding-top: 15px;
         }
 
         .dates-title {
-            border-top: 1px solid gray;
             padding: 15px 0 15px 0;
             text-align: center;
+        }
+
+        h1 {
+            color: white;
+            font-family: 'Righteous', cursive;
+            font-size: 3.8em;
         }
 
 		#home a {
@@ -93,11 +99,11 @@
         }
 
     	.middle {
+            background-color: #DDDDDD;
     		padding: 50px 0 75px 0;
     	}
 
     	.mission {
-            background-color: #FFDE65;
             font-size: 1.2em;
     		margin-top: -5px;
     		padding: 25px 0 50px 0;
@@ -113,6 +119,15 @@
             margin-bottom: 20px;
         }
 
+        .sub-logo {
+            padding: 75px 0 75px 0;
+            text-align: center;
+        }
+
+        .sub-logo-box {
+            background-color: #3B5998;
+        }
+
 	</style>
 </head>
 <body>
@@ -125,23 +140,23 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="#">CCAR</a>
+				<a class="navbar-brand" href="index.bootstrap.html">CCAR</a>
 			</div>
 			<div class="collapse navbar-collapse" id="my-navbar">
 				<ul class="nav navbar-nav navbar-right">
 					<li class="dropdown">
 						<a class="dropdown-toggle" data-toggle="dropdown" href="#">SCHOLARSHIP<span class="caret"></span></a>
 	    				<ul class="dropdown-menu">
-	    					<li><a href="#">ELIGIBILITY</a></li>
+	    					<li><a href="eligibility.bootstrap.html">ELIGIBILITY</a></li>
 							<li><a href="#">APPLICATION</a></li>
 	    				</ul>
 					</li>
 	  				<li class="dropdown">
-	  					<a class="dropdown-toggle" data-toggle="dropdown" href="#">ABOUT US<span class="caret"></span></a>
+	  					<a class="dropdown-toggle" data-toggle="dropdown" href="#">ABOUT<span class="caret"></span></a>
 	    				<ul class="dropdown-menu">
-                            <li><a href="#">FOUNDATION</a></li>
-		  					<li><a href="#">TRUSTEES</a></li>
-		  					<li><a href="#">CONTRIBUTION</a></li>
+                            <li><a href="foundation.bootstrap.html">FOUNDATION</a></li>
+		  					<li><a href="trustees.bootstrap.html">TRUSTEES</a></li>
+		  					<li><a href="contribution.bootstrap.html">CONTRIBUTION</a></li>
 		  				</ul>
 	  				</li>
                     <li class="dropdown">
@@ -156,11 +171,20 @@
 		</div>
 	</nav>
     <div class="container-fluid">
+        <div class="row sub-logo-box">
+            <div class="col-md-2"></div>
+            <div class="col-md-8 sub-logo">
+                <div class="col-md-12">
+                    <h1 class="tlt">CCAR SCHOLARSHIP FOUNDATION</h1>
+                </div>
+            </div>
+            <div class="col-md-2"></div>
+        </div>
         <div class="row">
         	<div class="col-md-12 mission">
 	        	<div class="col-md-3"></div>
 	            <div class="col-md-6">
-	            	<h1 class="motto tlt">We love to support higher education.</h1>
+	            	<h1 class="motto">We love to support higher education.</h1>
 	            	<p>The Contra Costa Association of Realtors Scholarship Foundation provides college scholarship grants to qualifying students in the fields of finance, business and real estate. Our commitment to support higher education is the heart of the Contra Costa Association of Realtors' desire to make a difference!</p>
 	            </div>
 	            <div class="col-md-3"></div>
@@ -179,12 +203,12 @@
     			 <div class="col-md-4">
     			 	<h3 class="med-text">The Scholarship</h3>
     			 	<p>Find out more about the scholarship, eligibility, and what you need to submit with your application.</p>
-                    <a class="btn btn-secondary link" href="#" role="button">Eligibility</a>
+                    <a class="btn btn-secondary link" href="eligibility.bootstrap.html" role="button">Eligibility</a>
     			 </div>
     			 <div class="col-md-4">
     			 	<h3 class="med-text">The Foundation</h3>
     			 	<p>Learn about the CCAR Scholarship Foundation, our history, and meet the board of trustees.</p>
-                    <a class="btn btn-secondary link" href="#" role="button">About Us</a>
+                    <a class="btn btn-secondary link" href="foundation.bootstrap.html" role="button">About</a>
     			 </div>
                  <div class="col-md-4">
                     <h3 class="med-text">Past Recipients</h3>
@@ -236,16 +260,16 @@
                 <div class="col-md-2 footer-box">
                     <h4 class="footer-head">Scholarship</h4>
                     <ul>
-                        <li><a class="site-link" href="#">Eligibility</a></li>
+                        <li><a class="site-link" href="eligibility.bootstrap.html">Eligibility</a></li>
                         <li><a class="site-link" href="#">Application</a></li>
                     </ul>
                 </div>
         		<div class="col-md-2 footer-box">
-                    <h4 class="footer-head">About Us</h4>
+                    <h4 class="footer-head">About</h4>
                     <ul>
-                        <li><a class="site-link" href="#">Foundation</a></li>
-                        <li><a class="site-link" href="#">Trustees</a></li>
-                        <li><a class="site-link" href="#">Contribution</a></li>
+                        <li><a class="site-link" href="foundation.bootstrap.html">Foundation</a></li>
+                        <li><a class="site-link" href="trustees.bootstrap.html">Trustees</a></li>
+                        <li><a class="site-link" href="contribution.bootstrap.html">Contribution</a></li>
                     </ul>
                 </div>
                 <div class="col-md-2 footer-box">
