--- a/trustees.bootstrap.html
+++ b/trustees.bootstrap.html
@@ -26,12 +26,22 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 
 	<style>
+
+		.boxes {
+			text-align: center;
+			font-size: 1.2em;
+		}
 		
 		img {
 			width: 90%;
 		}
 
+		.middle {
+			padding: 50px 0 50px 0;
+		}
+
 		.title-box {
+			background-image: url("images/CCARyellow.jpg");
 			background-color: #FFDE65;
 			color: #003366;
 			font-family: 'Lato', sans-serif;
@@ -361,8 +371,7 @@
 								<h3 class="label__heading">
 									Chuck Miller
 								</h3>
-								<span>Trustee<br>-<br>-<br>
-								<a href="">email</a></span>
+								<span>AffiliateTrustee<br>American Pacific Mortgage<br>(925) 596-4018<br>
 								
 							</figcaption>
 						</figure>
