--- a/eligibility.bootstrap.html
+++ b/eligibility.bootstrap.html
@@ -31,6 +31,7 @@
         }
 
         .eligibility-application {
+            background-image: url("images/CCARblue1.jpg");
             background-color: #0D2134;
             color: white;
             font-family: 'Lato', sans-serif;
@@ -45,6 +46,7 @@
         }
 
 		.eligibility-title {
+            background-image: url("images/CCARyellow.jpg");
             background-color: #FFDE65;
             color: #003366;
             font-family: 'Lato', sans-serif;
