--- a/foundation.bootstrap.html
+++ b/foundation.bootstrap.html
@@ -27,6 +27,7 @@
 	<style>
 
         .eligibility-application {
+            background-image: url("images/CCARblue1.jpg");
             background-color: #0D2134;
             color: white;
             font-family: 'Lato', sans-serif;
@@ -41,6 +42,7 @@
         }
 
 		.eligibility-title {
+            background-image: url("images/CCARyellow.jpg");
             background-color: #FFDE65;
             color: #003366;
             font-family: 'Lato', sans-serif;
