--- a/index.bootstrap.html
+++ b/index.bootstrap.html
@@ -8,7 +8,7 @@
 	<!-- Latest compiled and minified CSS -->
 
     <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Righteous' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Vollkorn:400,700' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
     <link rel="stylesheet" href="styles.css">
@@ -41,6 +41,8 @@
         }
 
         .dates {
+            background-image: url("images/CCARgray.jpg");
+            background-color: #DDDDDD;
             padding: 30px 0 50px 0;
             text-align: center;
         }
@@ -52,10 +54,10 @@
         }
 
         .dates-text {
-            color: #003366;
+            color: white;
             font-family: 'Lato', sans-serif;
             font-size: 2.25em;
-            padding-top: 15px;
+            padding: 15px 0 15px 0;
         }
 
         .dates-title {
@@ -63,9 +65,18 @@
             text-align: center;
         }
 
+        .dates-row {
+            background-color: #003366;
+        }
+
+        .flip-text {
+            border: 2px solid white;
+            padding: 25px 0 25px 0;
+        }
+
         h1 {
             color: white;
-            font-family: 'Righteous', cursive;
+            font-family: 'Vollkorn', serif;
             font-size: 3.8em;
         }
 
@@ -74,6 +85,26 @@
     		height: 100px;
     		background-image: url('images/CCARlogo.png');
     	}
+
+        .img-row {
+            background-image: url("images/CCARyellow.jpg");
+            background-color: #DDDDDD;
+            padding: 50px 0 50px 0;
+        }
+
+        .img-size {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            width: 250px;
+        }
+
+        .img-text {
+            font-family: 'Lato', sans-serif;
+            font-size: 1.2em;
+            line-height: 175%;
+            text-align: center;
+        }
 
         .link {
             background-color: #FFD84B;
@@ -99,7 +130,7 @@
         }
 
     	.middle {
-            background-color: #DDDDDD;
+            background-color: #F0F0F0;
     		padding: 50px 0 75px 0;
     	}
 
@@ -125,7 +156,8 @@
         }
 
         .sub-logo-box {
-            background-color: #3B5998;
+            background-image: url("images/CCARblue1.jpg");
+            background-color: #003366;
         }
 
 	</style>
@@ -175,31 +207,46 @@
             <div class="col-md-2"></div>
             <div class="col-md-8 sub-logo">
                 <div class="col-md-12">
-                    <h1 class="tlt">CCAR SCHOLARSHIP FOUNDATION</h1>
+                    <h1 class="flip-text tlt">CCAR SCHOLARSHIP FOUNDATION</h1>
                 </div>
             </div>
             <div class="col-md-2"></div>
         </div>
         <div class="row">
         	<div class="col-md-12 mission">
-	        	<div class="col-md-3"></div>
-	            <div class="col-md-6">
+	        	<div class="col-md-2"></div>
+	            <div class="col-md-8">
 	            	<h1 class="motto">We love to support higher education.</h1>
 	            	<p>The Contra Costa Association of Realtors Scholarship Foundation provides college scholarship grants to qualifying students in the fields of finance, business and real estate. Our commitment to support higher education is the heart of the Contra Costa Association of Realtors' desire to make a difference!</p>
 	            </div>
-	            <div class="col-md-3"></div>
+	            <div class="col-md-2"></div>
 	        </div>
         </div>
+        <div class="row img-row">
+            <div class="col-md-2"></div>
+            <div class="col-md-8">
+                <div class="col-md-1"></div>
+                <div class="col-md-4">
+                    <img src="images/CCARvertical.jpg" alt="CM" class="img-circle img-size">
+                </div>
+                <div class="col-md-1"></div>
+                <div class="col-md-5 img-text">
+                    The Contra Costa Association of Realtors Scholarship Foundation provides college scholarship grants to qualifying students in the fields of finance, business, and real estate. Our commitment to support higher education is the heart of the Contra Costa Association of Realtors' desire to make a difference!
+                </div>
+                <div class="col-md-1"></div>
+            </div>
+            <div class="col-md-2"></div>
+        </div>
         <div class="row">
-            <div class="col-md-3"></div>
-            <div class="col-md-6">
+            <div class="col-md-2"></div>
+            <div class="col-md-8">
 
             </div>
-            <div class="col-md-3"></div>
+            <div class="col-md-2"></div>
         </div>
         <div class="row middle">
-    		<div class="col-md-3"></div>
-    		<div class="col-md-6 boxes">
+    		<div class="col-md-2"></div>
+    		<div class="col-md-8 boxes">
     			 <div class="col-md-4">
     			 	<h3 class="med-text">The Scholarship</h3>
     			 	<p>Find out more about the scholarship, eligibility, and what you need to submit with your application.</p>
@@ -216,18 +263,18 @@
                     <a class="btn btn-secondary link" href="#" role="button">Gallery</a>
                  </div>
     		</div>
-    		<div class="col-md-3"></div>
+    		<div class="col-md-2"></div>
         </div>
-        <div class="row">
-            <div class="col-md-3"></div>
-            <div class="col-md-6 dates-title">
+        <div class="row dates-row">
+            <div class="col-md-2"></div>
+            <div class="col-md-8 dates-title">
                 <h3 class="dates-text">Dates & Deadlines</h3>
             </div>
-            <div class="col-md-3"></div>
+            <div class="col-md-2"></div>
         </div>
         <div class="row dates">
-            <div class="col-md-3"></div>
-            <div class="col-md-6">
+            <div class="col-md-2"></div>
+            <div class="col-md-8">
                 <div class="col-md-3 dates-box">
                     <h3 class="date"><strong>3/1/2016</strong></h3><br /><p>Application Opens</p>
                 </div>
@@ -241,11 +288,11 @@
                     <h3 class="date"><strong>7/8/2016</strong></h3><br /><p>Award Luncheon</p>
                 </div>  
             </div>
-            <div class="col-md-3"></div>
+            <div class="col-md-2"></div>
         </div>
         <div class="row footer">
-            <div class="col-md-3"></div>
-            <div class="col-md-6">
+            <div class="col-md-2"></div>
+            <div class="col-md-8">
         		<div class="col-md-3 address">
         			<p>
         			Contra Costa Association of Realtors®</br>
@@ -280,11 +327,11 @@
                     </ul>
                 </div>
             </div>
-            <div class="col-md-3"></div>
+            <div class="col-md-2"></div>
         </div>
         <div class="row icons">
-            <div class="col-md-3"></div>
-            <div class="col-md-6">
+            <div class="col-md-2"></div>
+            <div class="col-md-8">
                 <div id="social-media-icons">
                     <ul>    
                         <li><a href="#" target="_blank"><img src="images/FacebookW.png" id="Facebook" alt="Facebook" style="width:35px; height:35px;"/></a></li>
@@ -293,14 +340,14 @@
                     </ul>
                 </div>
             </div>
-            <div class="col-md-3"></div>
+            <div class="col-md-2"></div>
         </div>
         <div class="row copyright">
-            <div class="col-md-3"></div>
-            <div class="col-md-6 line">
+            <div class="col-md-2"></div>
+            <div class="col-md-8 line">
                 <p>© 2016 CCAR Scholarship Foundation</p>
             </div>
-            <div class="col-md-3"></div>
+            <div class="col-md-2"></div>
         </div>
     </div>
 
